# CalculatorCPP

./: CMakeLists.txt
plugins/: add.cpp  mul.cpp
src/: main.cpp  plugin.h
